migrated posts + updated code styling